NIFI-8491: - Fixing pending apply message clipping. - Hiding pending apply message after clicking Apply.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/new-parameter-context-dialog.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/new-parameter-context-dialog.css
@@ -205,6 +205,7 @@ span.parameter-context-referencing-component-name {
     top: 550px;
     left: 20px;
     font-size: 13px;
+    line-height: normal;
     color: #775351;
     max-width: calc(100% - 230px);
     z-index: 999;
